finished wilson algorithm